Ajout mots a trouver
- Ajout de l'affichage de lettres issues d'un mot pris au hasard (vue 2D)
- Mise à jour des conditions de victoires

- TODO: Ne pas afficher le mot a trouver, mais afficher les lettres dans l'ordre de récupération puis demander au joueur de trouver le mot

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,7 @@
   <div>
     <input type="number" placeholder="Colonnes" [(ngModel)]="Columns" (document:keydown.arrowup)="prevent($event)" (document:keydown.arrowdown)="prevent($event)"/>
     <input type="number" placeholder="Lignes" [(ngModel)]="Lignes" (document:keydown.arrowup)="prevent($event)" (document:keydown.arrowdown)="prevent($event)"/>
+    <label><input type="checkbox" placeholder="Avec mot" [(ngModel)]="WithWord">Avec des mots</label>
     <button type="button" class="btn" (click)="reset()">Nouveau</button>
   </div>
   <div *ngIf="showButtons">
